# spec2scaffold

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
src/spec2scaffold/: cli.py
tests/: test_smoke.py
