[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec2scaffold"
version = "0.1.0"
description = "Generate project scaffolds from product specs"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
spec2scaffold = "spec2scaffold.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
